<resources>
    <string name="app_name">TicTacToe</string>
    <string name="str_player1">Player 1</string>
    <string name="str_player2">Player 2</string>
    <string name="str_start_new_game">Start New Game</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_start">Start</string>
    <string name="str_game_result">Game Result</string>
    <string name="str_new_game">New Game</string>
    <string name="str_exit">Exit</string>
    <string name="str_winner_is">Winner is</string>
    <string name="str_space">\u0020</string>
</resources>
